--- a/index.html
+++ b/index.html
@@ -1,91 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link href='https://fonts.googleapis.com/css?family=Nova Flat' rel='stylesheet'>
-    <title>Calculator | Skylarkabir</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="x-ua-compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Calculator - By SkylarkAbir</title>
 </head>
 <body>
-
-    <div class="wrapper">
-        <section class="screen"> 
-            0
-        </section>
-
-        <section class="calc_buttons">
-            <div class="calc-button-row">
-                <button class="calc-button double">
-                    C
-                </button>
-                <button class="calc-button">
-                    &larr;
-                </button>
-                <button class="calc-button">
-                    &divide;
-                </button>
-            </div>
-
-            <div class="calc-button-row">
-                <button class="calc-button">
-                    7
-                </button>
-                <button class="calc-button">
-                    8
-                </button>
-                <button class="calc-button">
-                    9
-                </button>
-                <button class="calc-button">
-                    &times;
-                </button>
-            </div>
-
-            <div class="calc-button-row">
-                <button class="calc-button">
-                    4
-                </button>
-                <button class="calc-button">
-                    5
-                </button> 
-                <button class="calc-button">
-                    6
-                </button>
-                <button class="calc-button">
-                    &minus;
-                </button>
-            </div>
-
-            <div class="calc-button-row">
-                <button class="calc-button">
-                    1
-                </button>
-                <button class="calc-button">
-                    2
-                </button>
-                <button class="calc-button">
-                    3
-                </button>
-                <button class="calc-button">
-                    &plus;
-                </button>
-            </div>
-
-            <div class="calc-button-row">
-                <button class="calc-button triple">
-                    0
-                </button>
-                <button class="calc-button">
-                    &equals;
-                </button>
-            </div>
-        
-        </section>
-    
+  <div class="card">
+      <input type="text" placeholder="0" id="inputBox">
+      <div>
+        <button class="operator">AC</button>
+        <button class="operator">DEL</button>
+        <button class="operator">%</button>
+        <button class="operator">/</button>
+      </div>
+      <div>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button class="operator">*</button>
+      </div>
+      <div>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button class="operator">-</button>
+      </div>
+      <div>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button class="operator">+</button>
+      </div>
+      <div>
+        <button>00</button>
+        <button>0</button>
+        <button>.</button>
+        <button class="equalBtn">=</button>
+      </div>
     </div>
-
+  
+    <a>minCALC | SKYLARK_ABIR</a>
     <script src="script.js"></script>
 </body>
 </html>
+
+
+  
